# techxchange2-2026-automation

./: .gitignore  github-deployment-pipeline-plan.md
.bob/skills/use-uv/: SKILL.md
.github/workflows/: cd.yml  ci.yml
k8s/: deployment.yaml  route.yaml  service.yaml
rag-app/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  api.py  mcp_agent.py  mcp_client.py  pyproject.toml
rag-app/static/: index.html
rag-app/static/views/: github_commits.html  github_issues.html  github_prs.html  github_repo.html  github_search.html
rag-app/tests/: test_smoke.py
